--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,9 +8,11 @@
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts"
+    "src/polyfills.ts",
+    "Log"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "./appsettings.json"
   ]
 }
