--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,11 +8,10 @@
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts",
-    "Log"
+    "src/polyfills.ts"
   ],
   "include": [
     "src/**/*.d.ts",
-    "./appsettings.json"
+    "appsettings.json"
   ]
 }
