--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
+    "outDir": "./dist",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
@@ -14,17 +14,16 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
-    "moduleResolution": "Node",
-    "importHelpers": true,
-    "target": "es2017",
-    "module": "es2020",
+    "importHelpers": false,
+    "module": "commonjs",
     "lib": [
       "es2020",
       "dom"
     ]
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "src"
   ],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
