--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "build:ts": "tsc -p ."
-  }, 
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
@@ -35,6 +35,7 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.20.48",
+    "@types/whatwg-url": "^11.0.0",
     "electron": "^18.1.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
@@ -42,6 +43,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "whatwg-url": "^11.0.0"
   }
 }
