--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,11 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "importHelpers": false,
-    "module": "commonjs",
+    "moduleResolution": "Node",
+    "module": "CommonJS",
+    "skipLibCheck": true, 
     "lib": [
       "es2020",
       "dom"
@@ -23,12 +26,13 @@
   },
   "exclude": [
     "node_modules",
-    "src"
+    "src/**/*.spec.ts"
   ],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true, 
+    "experimentalDecorators": true
   }
 }
