--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "importHelpers": false,
     "moduleResolution": "Node",
     "module": "CommonJS",
+    "target": "ES2020",
     "skipLibCheck": true, 
     "lib": [
       "es2020",
