Implemented ResponseObject class for comfortable result set conversion - asMany<T> => T[] & asSignle<T> => T

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,14 +4,13 @@
   "compilerOptions": {
     "outDir": "./out-tsc/app",
     "types": ["node"],
-    "typeRoots": [ "../node_modules/@types" ]
+    "typeRoots": [ "../node_modules/@types"]
   },
   "files": [
     "src/main.ts",
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.d.ts",
-    "appsettings.json"
+    "src/**/*.d.ts"
   ]
 }
