--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
     "ts-postgres": "^1.3.0",
     "typescript": "~4.6.2",
     "whatwg-url": "^11.0.0"
+  },
+  "browser": {
+    "fs": false,
+    "path": false
   }
 }
