--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplesql",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "main": "app.ts",
   "scripts": {
     "ng": "ng",
@@ -8,7 +8,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:ts": "tsc -p ."
+    "build:ts": "tsc -p .",
+    "rebuild": "tsc -p . && ng build --base-href ./"
   },
   "private": true,
   "dependencies": {
